--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <nav class="navbar">
         <a href="./index.html">Начало</a>
         <a href="./testimonial.html">За нас</a>
-        <a href="#">профил</a>
+        <a href="./login form.html">профил</a>
         <a href="./blogs.html">Новини</a> 
         <a href="#">Контакти</a>  
     </nav>
@@ -60,7 +60,7 @@
                         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
                             Quisque non ultrices tellus. Vestibulum gravida justo in euismod viverra</p>
                         <div class="button">
-                            <a href="#" class="btn btn-1">започни</a>
+                            <a href="./register form.html" class="btn btn-1">започни</a>
                             <a href="#" class="btn">свали</a>
                         </div>  
                     </div>
@@ -353,7 +353,7 @@
                 <div class="icons">
                     <a href="./index.html">Начало</a>
                     <a href="./testimonial.html">за нас</a>
-                    <a href="#">профил</a>
+                    <a href="./login form.html">профил</a>
                     <a href="./blogs.html">новини</a>
                     <a href="#">контакти</a>
                 </div>
