--- a/testimonial.html
+++ b/testimonial.html
@@ -28,7 +28,7 @@
         <nav class="navbar">
             <a href="./index.html">Начало</a>
             <a href="./testimonial.html">за нас</a>
-            <a href="#">профил</a>
+            <a href="./login form.html">профил</a>
             <a href="./blogs.html">новини</a>
             <a href="#">контакти</a>
         </nav>
@@ -120,7 +120,7 @@
             <div class="icons">
                 <a href="./index.html">Начало</a>
                 <a href="./testimonial.html">за нас</a>
-                <a href="#">профил</a>
+                <a href="./login form.html">профил</a>
                 <a href="./blogs.html">новини</a>
                 <a href="#">контакти</a>
             </div>
